<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BirdGame">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_name"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"/>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_centerHorizontal="true"
        android:paddingStart="55dp"
        android:paddingEnd="55dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:layout_marginTop="350dp" />

    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:layout_centerHorizontal="true"
        android:paddingStart="55dp"
        android:paddingEnd="55dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:layout_marginTop="450dp"/>

</RelativeLayout>