<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.arkki.PlayGameFragment">


    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/currentBird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/highscore"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textSize="25sp"/>

    <GridLayout
        android:id="@+id/imageGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4"
        android:minHeight="500dp"
        android:minWidth="325dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp">

        <ImageView
            android:id="@+id/game_img_1"
            android:tag=""
            android:contentDescription="@string/start"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_height="125dp"
            android:layout_width="81.25dp"/>
        <ImageView
            android:id="@+id/game_img_2"
            android:contentDescription="@string/start"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_height="125dp"
            android:layout_width="81.25dp"/>
        <ImageView
            android:id="@+id/game_img_3"
            android:contentDescription="@string/start"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_height="125dp"
            android:layout_width="81.25dp"/>
        <ImageView
            android:id="@+id/game_img_4"
            android:contentDescription="@string/start"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_height="125dp"
            android:layout_width="81.25dp"/>
        <ImageView
            android:id="@+id/game_img_5"
            android:contentDescription="@string/start"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_height="125dp"
            android:layout_width="81.25dp"/>
        <ImageView
            android:id="@+id/game_img_6"
            android:contentDescription="@string/start"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_height="125dp"
            android:layout_width="81.25dp"/>
        <ImageView
            android:id="@+id/game_img_7"
            android:contentDescription="@string/start"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_height="125dp"
            android:layout_width="81.25dp"/>
        <ImageView
            android:id="@+id/game_img_8"
            android:contentDescription="@string/start"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_height="125dp"
            android:layout_width="81.25dp"/>
        <ImageView
            android:id="@+id/game_img_9"
            android:contentDescription="@string/start"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_height="125dp"
            android:layout_width="81.25dp"/>
        <ImageView
            android:id="@+id/game_img_10"
            android:contentDescription="@string/start"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_height="125dp"
            android:layout_width="81.25dp"/>
        <ImageView
            android:id="@+id/game_img_11"
            android:contentDescription="@string/start"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_height="125dp"
            android:layout_width="81.25dp"/>
        <ImageView
            android:id="@+id/game_img_12"
            android:contentDescription="@string/start"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_height="125dp"
            android:layout_width="81.25dp"/>
        <ImageView
            android:id="@+id/game_img_13"
            android:contentDescription="@string/start"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_height="125dp"
            android:layout_width="81.25dp"/>
        <ImageView
            android:id="@+id/game_img_14"
            android:contentDescription="@string/start"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_height="125dp"
            android:layout_width="81.25dp"/>
        <ImageView
            android:id="@+id/game_img_15"
            android:contentDescription="@string/start"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_height="125dp"
            android:layout_width="81.25dp"/>
        <ImageView
            android:id="@+id/game_img_16"
            android:contentDescription="@string/start"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_height="125dp"
            android:layout_width="81.25dp"/>
    </GridLayout>
</RelativeLayout>